syntax = "proto3";


package storage;

option go_package = "./storage";

service StorageManagement {
rpc Get(GetRequest) returns (GetResponse) {}

rpc Set(SetRequest) returns (SetResponse) {}

rpc Delete(DeleteRequest) returns (DeleteResponse) {}

}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    bytes resultOK= 2;
}


message SetRequest {
    string key = 1;
    bytes value = 2;
}


message SetResponse {
    string key = 1;
	bytes resultStored = 2;
}

message DeleteRequest {
    string key = 1;
}


message DeleteResponse {
    bytes resultDeleted = 1;
}